--- a/templates/taxi/car_detail.html
+++ b/templates/taxi/car_detail.html
@@ -1,22 +1,26 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>
-    {{ car.model }}
-    <a href="{% url 'taxi:car-delete' pk=car.id %}" class="btn btn-danger link-to-page">
-      Delete
-    </a>
+  <h1>Car Detail</h1>
+  <p><strong>Model:</strong> {{ car.model }}</p>
+  <p><strong>Manufacturer:</strong> {{ car.manufacturer.name }}</p>
 
-    <a href="{% url 'taxi:car-update' pk=car.id %}" class="btn btn-secondary link-to-page">
-      Update
-    </a>
-  </h1>
-  <p>Manufacturer: ({{ car.manufacturer.name }}, {{ car.manufacturer.country }})</p>
-  <h1>Drivers</h1>
-  <hr>
+  <h2>Drivers</h2>
   <ul>
     {% for driver in car.drivers.all %}
       <li>{{ driver.username }} ({{ driver.first_name }} {{ driver.last_name }})</li>
     {% endfor %}
   </ul>
+
+  {% if request.user in car.drivers.all %}
+    <form action="{% url 'taxi:remove-driver' pk=car.id %}" method="post">
+      {% csrf_token %}
+      <button type="submit" class="btn btn-danger">Remove me from this car</button>
+    </form>
+  {% else %}
+    <form action="{% url 'taxi:car-add-driver' pk=car.id %}" method="post">
+      {% csrf_token %}
+      <button type="submit" class="btn btn-success">Assign me to this car</button>
+    </form>
+  {% endif %}
 {% endblock %}
