changed html for car_detail

--- a/templates/taxi/car_detail.html
+++ b/templates/taxi/car_detail.html
@@ -13,7 +13,7 @@
   </ul>
 
   {% if request.user in car.drivers.all %}
-    <form action="{% url 'taxi:remove-driver' pk=car.id %}" method="post">
+    <form action="{% url 'taxi:car-remove-driver' pk=car.id %}" method="post">
       {% csrf_token %}
       <button type="submit" class="btn btn-danger">Remove me from this car</button>
     </form>
