--- a/templates/taxi/car_detail.html
+++ b/templates/taxi/car_detail.html
@@ -12,15 +12,11 @@
     {% endfor %}
   </ul>
 
-  {% if request.user in car.drivers.all %}
-    <form action="{% url 'taxi:car-remove-driver' pk=car.id %}" method="post">
-      {% csrf_token %}
-      <button type="submit" class="btn btn-danger">Remove me from this car</button>
-    </form>
-  {% else %}
-    <form action="{% url 'taxi:car-add-driver' pk=car.id %}" method="post">
-      {% csrf_token %}
-      <button type="submit" class="btn btn-success">Assign me to this car</button>
-    </form>
-  {% endif %}
+  <form method="post">
+    {% csrf_token %}
+    <input type="hidden" name="car_id" value="{{ car.id }}">
+    <button type="submit" name="action" value="{% if request.user in car.drivers.all %}remove{% else %}add{% endif %}" class="btn {% if request.user in car.drivers.all %}btn-danger{% else %}btn-success{% endif %}">
+      {% if request.user in car.drivers.all %}Remove me from this car{% else %}Assign me to this car{% endif %}
+    </button>
+  </form>
 {% endblock %}
